--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
   <script src="bower_components/FitText.js/jquery.fittext.js"></script>
   <script src="bower_components/wow/dist/wow.js"></script>
   <script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
+  <script src="bower_components/auth0-lock-passwordless/build/lock-passwordless.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -77,6 +78,7 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/about.js"></script>
+  <script src="scripts/services/auth0.js"></script>
   <!-- endbuild -->
 
 </body>
