--- a/app/index.html
+++ b/app/index.html
@@ -277,6 +277,8 @@
   <footer class="footer">
     <div class="container">
       <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      <img src="http://mautic.desenvolvedor.expert/mtracking.gif?page_url=http%3A%2F%2Fdesenvolvedor.expert&page_title=Welcome%20home&tags=welcome"
+           style="display: none;"  alt="mautic is open source marketing automation" />
     </div>
   </footer>
 
