last update to publish

--- a/app/index.html
+++ b/app/index.html
@@ -63,12 +63,6 @@
           <li>
             <a class="page-scroll" href="#services" analytics-on>O que tem aqui?</a>
           </li>
-          <li>
-            <a class="page-scroll" href="#portfolio" analytics-on>Portfolio</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#contact" analytics-on>Contato</a>
-          </li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -148,135 +142,19 @@
     </div>
   </section>
 
-  <section class="no-padding" id="portfolio">
-    <div class="container-fluid">
-      <div class="row no-gutter">
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box" analytics-on>
-            <img src="images/portfolio/1.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box" analytics-on>
-            <img src="images/portfolio/2.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box" analytics-on>
-            <img src="images/portfolio/3.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box" analytics-on>
-            <img src="images/portfolio/4.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box" analytics-on>
-            <img src="images/portfolio/5.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box" analytics-on>
-            <img src="images/portfolio/6.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <aside class="bg-dark">
     <div class="container text-center">
       <div class="call-to-action">
-        <h2>Download Gratuito basta se inscrever!</h2>
+        <h2>Download Gratuito!</h2>
         <a ng-click="main.login()" class="btn btn-default btn-xl wow tada" analytics-on>Baixe Agora!</a>
       </div>
     </div>
   </aside>
 
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading">Let's Get In Touch!</h2>
-          <hr class="primary">
-          <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-        </div>
-        <div class="col-lg-4 col-lg-offset-2 text-center">
-          <i class="fa fa-phone fa-3x wow bounceIn"></i>
-          <p>123-456-6789</p>
-        </div>
-        <div class="col-lg-4 text-center">
-          <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-          <p><a href="mailto:your-email@your-domain.com" analytics-on>feedback@startbootstrap.com</a></p>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <footer class="footer">
     <div class="container">
-      <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      <p>Feito com <span class="glyphicon glyphicon-heart"></span> por <a href="https://twitter.com/milesibastos"
+          class="text-muted" analytics-on>@milesibastos</a></p>
       <img src="http://mautic.desenvolvedor.expert/mtracking.gif?page_url=http%3A%2F%2Fdesenvolvedor.expert&page_title=Welcome%20home&tags=welcome"
            style="display: none;"  alt="mautic is open source marketing automation" />
     </div>
