add pixel to mautic.com

--- a/app/index.html
+++ b/app/index.html
@@ -156,7 +156,9 @@
       <p>Feito com <span class="glyphicon glyphicon-heart"></span> por <a href="https://twitter.com/milesibastos"
           class="text-muted" analytics-on>@milesibastos</a></p>
       <img src="http://mautic.desenvolvedor.expert/mtracking.gif?page_url=http%3A%2F%2Fdesenvolvedor.expert&page_title=Welcome%20home&tags=welcome"
-           style="display: none;"  alt="mautic is open source marketing automation" />
+        style="display: none;"  alt="mautic is open source marketing automation" />
+      <img src="https://devexpert.mautic.com/mtracking.gif?page_url=http%3A%2F%2Fdesenvolvedor.expert&page_title=Welcome%20home&tags=welcome"
+        style="display: none;"  alt="mautic is open source marketing automation" />
     </div>
   </footer>
 
