--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
           <p>Estamos descobrindo maneiras melhores de desenvolver software, fazendo-o nós mesmos e ajudando outros a fazerem o mesmo.</p>
           <footer class="text-right">Manifesto para <cite title="agilemanifesto.org">Desenvolvimento Ágil de Software</cite></footer>
         </blockquote>
-        <p class="lead">Tudo que eu gostaria que algém tivesse me dito quando eu comecei a programar.</p>
+        <p class="lead">Tudo que eu gostaria que alguém tivesse me dito quando eu comecei a programar.</p>
         <a ng-click="main.login()" class="btn btn-primary btn-xl" analytics-on>Saiba Agora &nbsp;&nbsp;&nbsp;<span class="fa fa-mouse-pointer"></span></a>
       </div>
     </div>
